--- a/book.htm
+++ b/book.htm
@@ -31,7 +31,7 @@ target="_blank">三民書局的相關主題圖書資料</a>
 <table border="1">
   <tr>
     <td width="400" height="200"><a href="https://activity.sanmin.com.tw/promotions/2021/1101books/index?utmgtm=Publisher180bn&_ga=2.87883352.1716165900.1636124572-1253904786.1636124572" target="_blank">
-    <img src="金書獎.JFIF"></img></a>
+    <img src="金書獎.jfif"></img></a>
     </td>
 
     <td>
