--- a/book.htm
+++ b/book.htm
@@ -48,7 +48,7 @@ target="_blank">三民書局的相關主題圖書資料</a>
 
   <tr>
     <td width="400" height="200"><a href="https://activity.sanmin.com.tw/promotions/qbima/1020/index?utmgtm=Publisher180bn&_ga=2.109556421.1716165900.1636124572-1253904786.1636124572" target="_blank">
-    <img src="外文暢銷.JFIF"></img></a>
+    <img src="外文暢銷.jfif"></img></a>
     </td>
 
     <td>
@@ -68,7 +68,7 @@ target="_blank">三民書局的相關主題圖書資料</a>
   
   <tr>
     <td width="400" height="200"><a href="https://activity.sanmin.com.tw/promotions/2021/1111sanmin/index?utmgtm=Publisher180bn&_ga=2.108977730.1716165900.1636124572-1253904786.1636124572" target="_blank">
-    <img src="雙拾壹.JFIF"></img></a>
+    <img src="雙拾壹.jfif"></img></a>
     </td>
 
     <td>
@@ -88,7 +88,7 @@ target="_blank">三民書局的相關主題圖書資料</a>
 
   <tr>
     <td width="400" height="200"><a href="https://activity.sanmin.com.tw/promotions/2021/1101united/index?utmgtm=Publisher180bn&_ga=2.118464329.1716165900.1636124572-1253904786.1636124572" target="_blank">
-    <img src="聯合.JFIF"></img></a>
+    <img src="聯合.jfif"></img></a>
     </td>
 
     <td>
@@ -111,7 +111,7 @@ target="_blank">三民書局的相關主題圖書資料</a>
 
   <tr>
     <td width="400" height="200"><a href="https://activity.sanmin.com.tw/promotions/2021/1103jimmy/index?utmgtm=Publisher180bn&_ga=2.122059211.1716165900.1636124572-1253904786.1636124572" target="_blank">
-    <img src="幾米1.JFIF"></img></a>
+    <img src="幾米1.jfif"></img></a>
     </td>
 
     <td>
@@ -133,7 +133,7 @@ target="_blank">三民書局的相關主題圖書資料</a>
 
   <tr>
     <td width="400" height="200"><a href="https://activity.sanmin.com.tw/promotions/2021/1101novel/index?utmgtm=Publisher180bn&_ga=2.117430726.1716165900.1636124572-1253904786.1636124572" target="_blank">
-    <img src="解謎.JFIF"></a>
+    <img src="解謎.jfif"></a>
     </td>
 
     <td>
@@ -149,7 +149,7 @@ target="_blank">三民書局的相關主題圖書資料</a>
 
   <tr>
     <td width="400" height="200"><a href="https://activity.sanmin.com.tw/promotions/2021/1022leeyang/index?utmgtm=Publisher180bn&_ga=2.75290322.1716165900.1636124572-1253904786.1636124572" target="_blank">
-    <img src="李洋.JFIF"></img></a>
+    <img src="李洋.jfif"></img></a>
     </td>
 
     <td>
@@ -166,7 +166,7 @@ target="_blank">三民書局的相關主題圖書資料</a>
 
   <tr>
     <td width="400" height="200"><a href="https://activity.sanmin.com.tw/promotions/2020/061502sanmin/index?utmgtm=Publisher180bn&_ga=2.117822921.1716165900.1636124572-1253904786.1636124572" target="_blank">
-    <img src="毓老師.JFIF"></img></a>
+    <img src="毓老師.jfif"></img></a>
     </td>
 
     <td>
@@ -181,7 +181,7 @@ target="_blank">三民書局的相關主題圖書資料</a>
 
   <tr>
     <td width="400" height="200"><a href="https://activity.sanmin.com.tw/promotions/rita/0301/index?utmgtm=Publisher180bn&_ga=2.109377093.1716165900.1636124572-1253904786.1636124572" target="_blank">
-    <img src="魔法世界.JFIF"></img></a>
+    <img src="魔法世界.jfif"></img></a>
     </td>
 
     <td>
@@ -198,7 +198,7 @@ target="_blank">三民書局的相關主題圖書資料</a>
 
   <tr>
     <td width="400" height="200"><a href="https://activity.sanmin.com.tw/promotions/2021/1022iread/index?utmgtm=Publisher180bn&_ga=2.185561833.1716165900.1636124572-1253904786.1636124572" target="_blank">
-    <img src="小豆子.JFIF"></img></a>
+    <img src="小豆子.jfif"></img></a>
     </td>
 
     <td>
