--- a/book.htm
+++ b/book.htm
@@ -24,7 +24,7 @@ target="_blank">三民書局的相關主題圖書資料</a>
 
 <a href="https://www.bing.com/maps?q=%e4%b8%89%e6%b0%91%e6%9b%b8%e5%b1%80&FORM=HDRSC6" target="_blank">三民書局的分布圖</a>
 
-<form action="https://tw.search.yahoo.com/search" method="get">
+<form action="https://www.sanmin.com.tw/Search" method="get">
 <input type="text" name="p">
 <input type="submit" value="搜尋">
 
